Add ARCHITECTURE.md and prepare for deployment